--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html><!--  Last Published: Thu May 27 2021 10:37:25 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Mon Jun 21 2021 17:02:47 GMT+0000 (Coordinated Universal Time)  
+-->
 <html data-wf-page="609bc1a46069c4090dc14e90" data-wf-site="609bc1a36069c4fd8cc14e8c">
 <head>
   <meta charset="utf-8">
@@ -34,12 +35,16 @@
                   ████████████████████████    
                     ████████████████████      
                         ████████████          
- -->
 
+-->
+<html data-wf-page="60cb55a4aded31264aacd516" data-wf-site="60cb55a4aded3142e5acd514">
+<head>
+  <meta charset="utf-8">
+  <title>Eggplant</title>
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
-  <link href="css/eggplant-2021.webflow.css" rel="stylesheet" type="text/css">
+  <link href="css/eggplant-2021-v2.webflow.css" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
   <script type="text/javascript">WebFont.load({  google: {    families: ["Changa One:400,400italic","Gothic A1:300,regular,500,600,700,800"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
@@ -51,131 +56,49 @@
   <div class="hero">
     <div data-collapse="medium" data-animation="default" data-duration="400" data-doc-height="1" role="banner" class="nav w-nav">
       <div class="nav-inner">
-        <div class="nav-logo-wrap">
-          <h2 class="heading-14">Eggplant</h2>
-        </div>
-        <div class="nav-menu-wrap">
-          <nav role="navigation" class="nav-menu-2 w-nav-menu">
-            <a href="#about" class="nav-link w-nav-link">About</a>
-            <a href="#dex" class="nav-link w-nav-link">DEX</a>
-            <a href="#roadmap" class="nav-link w-nav-link">Roadmap</a>
-            <a href="#tokenomics" class="nav-link w-nav-link">Tokenomics</a>
-            <a href="#team" class="nav-link w-nav-link">Team</a>
-            <a href="https://dex.eggplantcrypto.com/" target="_blank" class="button-2 w-button">BUY EGGPLANT</a>
-          </nav>
-          <div class="menu-button w-nav-button">
-            <div class="menu-icon w-icon-nav-menu"></div>
-          </div>
-        </div>
+        <h2 class="heading-14">EGGPLANT</h2>
       </div>
     </div>
   </div>
   <div class="section center">
     <div class="hero-content">
-      <h3 class="hero-subhead">Eggplant is a new deflationary token on the Binance Smart Chain, featuring it&#x27;s own DEX — A passion project formed from the wet dreams of every crypto enthusiast</h3>
-      <a href="https://dex.eggplantcrypto.com/" target="_blank" class="button w-button">BUY EGGPLANT</a>
+      <h3 class="hero-subhead">Eggplant DEX is a brand new decentralized exchange on the Binance Smart chain. The exchange features swaps, liquidity pools and staking, offering high APR rewards.<br></h3>
+      <a href="https://dex.eggplantcrypto.com/" target="_blank" class="button w-button">Enter Eggplant DEX</a>
     </div>
   </div>
   <section id="about" class="feature-section">
     <div class="flex-container w-container">
-      <div>
+      <div class="div-block-16">
         <h2 class="heading-5">About</h2>
-        <p class="paragraph-2">Why was crypto created in the first place? Have you forgotten? <br>It was to escape the stranglehold Wall Street, governments and big banks have on finance as we know it. Bitcoin was created as a first step after the financial crisis in 2008. Decentralized exchanges like Eggplant are the next step. <br><br>You watched this past year as money printing soared to levels never seen before, centralized exchanges and media sources colluded to manipulate assets and lock you out of trading. On Eggplant DEX, that would be impossible.<br></p>
-      </div>
-    </div>
-    <div class="container-3 w-container"><img src="images/Eggplant-Chanting.gif" loading="lazy" width="500" alt="" class="image-9">
-      <div class="text-block-4"><br>As seen on</div>
-      <a href="https://www.marketwatch.com/press-release/eggplant-binance-smart-chains-freshest-decentralized-exchange-2021-05-20-41973912" target="_blank" class="w-inline-block"><img src="images/marketwatch-vector-logo.png" loading="lazy" width="400" sizes="(max-width: 479px) 84vw, 400px" srcset="images/marketwatch-vector-logo-p-500.png 500w, images/marketwatch-vector-logo.png 1251w" alt=""></a>
-    </div>
-  </section>
-  <section id="dex" class="cards-section">
-    <div class="centered-container w-container">
-      <h2 class="heading-6">DEX</h2>
-      <p class="paragraph-10">Eggplant Swap is a brand new DEX on the Binance Smart chain. Our exchange will feature both swaps and liquidity pools, offering high APR for top tokens and synthetic versions of traditional assets (Eggplant assets).<br><br>The DEX is now live, featuring swaps and the Eggplant-BNB liquidity pool. The Eggplant team is now focusing on adding staking options and bringing new exciting features, that currently do not exist in the decentralized space.<br>Refer to our whitepaper for more infomation and details.<br>‍<br>‍<br></p>
-      <a href="https://dex.eggplantcrypto.com/" target="_blank" class="button w-button">LAUNCH DEX</a>
-    </div>
-  </section>
-  <section id="roadmap" class="feature-section">
-    <div class="flex-container w-container">
-      <div>
+        <p class="paragraph-2">Why was crypto created in the first place? Have you forgotten? <br>It was to escape the stranglehold Wall Street, governments and big banks have on finance as we know it. Bitcoin was created as a first step after the financial crisis in 2008. Decentralized exchanges like Eggplant are the next step. <br><br>You watched this past year as money printing soared to levels never seen before, centralized exchanges and media sources colluded to manipulate assets and lock you out of trading. On Eggplant DEX, that would be impossible.<br><br>Eggplant DEX will give all users the opportunity to provide liquidity and stake assets in return for high APR yields.<br>‍<br><br><br></p>
         <h2 class="heading-5">Roadmap</h2>
-      </div>
-    </div>
-    <div class="container-2 w-container"><img src="images/Roadmap-05-27.png" loading="lazy" width="400" sizes="(max-width: 479px) 84vw, 400px" srcset="images/Roadmap-05-27-p-500.png 500w, images/Roadmap-05-27-p-800.png 800w, images/Roadmap-05-27.png 960w" alt="" class="image-7"></div>
-    <p class="paragraph-9"><br>Last updated: May 27, 2021<br></p>
-  </section>
-  <section id="tokenomics" class="cards-section">
-    <div class="centered-container w-container">
-      <h2 class="heading-6">Tokenomics</h2>
-      <h1 class="heading-18">Token ticker: <strong>$EGGPLANT</strong><strong class="bold-text-5"><br>Contract address:<br></strong><span><strong class="bold-text-5">‍</strong></span><span class="text-span"><strong class="bold-text-6">0x1583fFE1720027500ba6b284B1b1e9755d43e479</strong></span><span><strong class="bold-text-5"><br></strong></span><strong class="bold-text-5"><br></strong><span class="text-span-3">Initial Token Release</span><br>Total Supply: <strong>100,000,000,000,000<br></strong>Token Burn:<strong> 50,000,000,000,000<br></strong>Marketing/Development:<strong> 7,500,000,000,000<br></strong>Pancakeswap Liquidity Pool:<strong> 42,500,000,000,000</strong><strong class="bold-text-5"><br>Circulating Supply: </strong><strong>50,000,000,000,000</strong></h1>
-      <p class="paragraph-10"><strong><br></strong>Eggplant ($EGGPLANT) is a token on Binance Smart Chain possessing a number of exciting features. Eggplant features a unique deflationary design that exponentially decreases the total supply with every transaction made. <br><br>Eggplant is a decentralized project, meaning it is completlely community led and created by volunteers. There are no founder/developer wallets, however a small portion of tokens (7.5%) are reserved for marketing and development purposes. Over 50% of tokens are burned forever, and the remaining circulating supply is available on the open market. We have added a 1% max transaction amount to avoid large transactions and price manipulation.<br>‍<br><br>There is a <strong class="bold-text">4.5% transaction fee</strong> which is distributed as follows:<br><strong class="bold-text-2">2%</strong> is redistributed to all holders<strong><br></strong><strong class="bold-text-3">2%</strong> is added to Pancakeswap&#x27;s Liquidity Pool<strong><br></strong><strong class="bold-text-4">0.5%</strong> is sent to the burn address, meaning these are out of circulation forever, thus increasing the intial 50% burned amount.<br>‍<br>‍<br></p>
-      <div class="cards-grid-container">
-        <div id="w-node-d7765239-53cb-c1ac-656d-fae3026841b0-0dc14e90" class="div-block-13">
-          <h3 class="heading-7">👨‍👩‍👧‍👦</h3>
-          <h3 class="heading-8">Fair Launch</h3>
-          <p class="paragraph-3">NO pre-sale<br>NO founder/developer tokens<br>NO whale addresses<br></p>
-        </div>
-        <div id="w-node-d7765239-53cb-c1ac-656d-fae3026841b7-0dc14e90" class="div-block-14">
-          <h3 class="heading-7">🔒</h3>
-          <h3 id="w-node-d7765239-53cb-c1ac-656d-fae3026841ba-0dc14e90" class="heading-9">Not Ruggable</h3>
-          <p id="w-node-d7765239-53cb-c1ac-656d-fae3026841bc-0dc14e90" class="paragraph-4">All circulating tokens are locked in Pancakeswap&#x27;s Liquidity Pool<br></p>
-        </div>
-        <div id="w-node-d7765239-53cb-c1ac-656d-fae3026841be-0dc14e90" class="div-block-15">
-          <h3 class="heading-7">💸</h3>
-          <h3 id="w-node-d7765239-53cb-c1ac-656d-fae3026841c1-0dc14e90" class="heading-10">Hodling rewards</h3>
-          <p id="w-node-d7765239-53cb-c1ac-656d-fae3026841c3-0dc14e90" class="paragraph-5">Receive 2% of all transaction fees by simply holding $EGGPLANT in your wallet</p>
-        </div>
-      </div>
-    </div>
-  </section>
-  <section id="team" class="feature-section">
-    <div class="flex-container w-container">
-      <div>
-        <h2 class="heading-5">Team</h2>
-        <div class="cards-grid-container">
-          <div id="w-node-_77e8e7a9-4d08-b2fe-1706-95c69297a10d-0dc14e90" class="div-block-13"><img src="images/CEO.png" loading="lazy" width="200" height="200" srcset="images/CEO-p-500.png 500w, images/CEO.png 600w" sizes="200px" alt="">
-            <h3 class="heading-8">mr. eggplant</h3>
-            <p class="paragraph-3">Founder and CEO<br></p>
-          </div>
-          <div id="w-node-d1acc369-546a-899f-9d08-9d0e7b3b4772-0dc14e90" class="div-block-13"><img src="images/Community.png" loading="lazy" width="200" height="200" srcset="images/Community-p-500.png 500w, images/Community.png 600w" sizes="200px" alt="">
-            <h3 class="heading-8">Julia</h3>
-            <p class="paragraph-3">Cummunity and Support<br></p>
-          </div>
-          <div id="w-node-a28c8e10-3013-f925-9701-cb2f25f23e34-0dc14e90" class="div-block-13"><img src="images/Developer.png" loading="lazy" width="200" height="200" srcset="images/Developer-p-500.png 500w, images/Developer.png 600w" sizes="200px" alt="">
-            <h3 class="heading-8">Block</h3>
-            <p class="paragraph-3">Core Development<br></p>
-          </div>
-          <div id="w-node-_128910cb-61c6-e13e-41ff-61796527d9d7-0dc14e90" class="div-block-13"><img src="images/Designer.png" loading="lazy" width="200" height="200" srcset="images/Designer-p-500.png 500w, images/Designer.png 600w" sizes="200px" alt="">
-            <h3 class="heading-8">picasso</h3>
-            <p class="paragraph-3">Design<br></p>
-          </div>
-          <div id="w-node-_5f239027-ff5a-57ab-8406-69e0a75b680e-0dc14e90" class="div-block-13"><img src="images/Marketing.png" loading="lazy" width="200" height="200" srcset="images/Marketing-p-500.png 500w, images/Marketing.png 600w" sizes="200px" alt="">
-            <h3 class="heading-8">elon</h3>
-            <p class="paragraph-3">Marketing<br></p>
-          </div>
-          <div id="w-node-_8954d7d3-3f0b-7b72-2a3e-273f06728c32-0dc14e90" class="div-block-13"><img src="images/Holders.png" loading="lazy" width="200" height="200" srcset="images/Holders-p-500.png 500w, images/Holders.png 600w" sizes="200px" alt="">
-            <h3 class="heading-8">You</h3>
-            <p class="paragraph-3">Holder and Community Member<br></p>
-          </div>
-        </div>
+        <p class="paragraph-2">Q2 2021:<br><br>🟢 Eggplant token creation<br>🟢 List on PancakeSwap<br>🟢 Get listed on CoinGecko<br>🟢 Get verified on BscScan<br>🟢 Start social media marketing campaign <br>🟢 Team expansion<br>🟢 Launch Eggplant DEX<br>🟢 Add liquidity pools<br>🟢 Add staking features<br><br>Q3 2021:<br>‍<br>🟡 Exchange listing<br>🟡 List on CoinMarketCap<br>🟡 Continued viral marketing campaigns and community building<br>🟡 Potential partnership announcements<br>🟡 Launch of Synthetic Assets trading via Band Protocol<br><br>Q4 2021:<br><br>🟡 Implement extra unique features for users<br>🟡 Lifestyle brand creation<br>🟡 Launch of NFT’s<br>🟡 More coming…<br><br><br>‍<br></p>
+        <div class="div-block-17"><img src="images/Logo-Eggplant-Circle.png" width="100" sizes="100px" srcset="images/Logo-Eggplant-Circle-p-500.png 500w, images/Logo-Eggplant-Circle-p-800.png 800w, images/Logo-Eggplant-Circle-p-1080.png 1080w, images/Logo-Eggplant-Circle-p-1600.png 1600w, images/Logo-Eggplant-Circle.png 2000w" alt="" class="image-8"></div>
+        <h2 class="heading-5">$EGGPLANT Token</h2>
+        <p class="paragraph-2">Eggplant ($EGGPLANT) is a token on Binance Smart Chain possessing a number of exciting features. Eggplant features a unique deflationary design that exponentially decreases the total supply with every transaction made. <br><br>Eggplant is a decentralized project, meaning it is completely community led and created by volunteers. Over 50% of tokens are burned forever, and the remaining circulating supply is available on the open market. We have added a 1% max transaction amount to avoid large transactions and price manipulation.<br>‍<br>
+          <a href="https://eggplantcrypto.medium.com/introducing-eggplant-crypto-69ba2d30955f" target="_blank"><span class="text-span-4">Read more:<br>Introducing Eggplant<br><br>‍</span></a><br>
+        </p>
+        <div class="div-block-17"><img src="images/Logo-ESeed-Circle.png" width="100" sizes="100px" srcset="images/Logo-ESeed-Circle.png 500w, images/Logo-ESeed-Circle.png 800w, images/Logo-ESeed-Circle.png 1080w, images/Logo-ESeed-Circle.png 1600w, images/Logo-ESeed-Circle.png 2000w" alt="" class="image-8"></div>
+        <h2 class="heading-5">$ESEED Token</h2>
+        <p class="paragraph-2">Eseed ($ESEED) is a token that facilitates high APRs within our farming and staking platform and will be utilized as our very own Eggplant membership reward system. The more ESeed you hold, the greater the benefits. This includes, but won’t be limited to, farming and staking multipliers, multipliers to improve your chances with games and/or prediction markets, and discounts on merchandise or NFT collectibles.<br>‍<br>$EGGPLANT is the currency, while $ESEED is our rewards token. A proper ecosystem can’t have one without the other!<br>‍<br>
+          <a href="https://eggplantcrypto.medium.com/introducing-our-rewards-token-eseeed-f73633f80b79" target="_blank"><span class="text-span-4">Read more:<br>Introducing our Rewards Token: $ESEED</span></a><br>
+        </p>
       </div>
     </div>
   </section>
   <div class="bottom-image-wrap"></div>
   <div class="section wide purple">
     <div class="wrap">
-      <h2 class="heading-17">join the Eggplant revolution</h2>
+      <h2 class="heading-17">Jump into farming <br>with EGGPLANT DEX</h2>
       <div class="button-wrap">
-        <a href="https://dex.eggplantcrypto.com/" target="_blank" class="button w-button">BUY EGGPLANT</a>
+        <a href="https://dex.eggplantcrypto.com/" target="_blank" class="button w-button">Enter Eggplant DEX</a>
       </div>
-      <p class="paragraph-9"><br>
-        <a href="https://eggplantcrypto.medium.com/step-by-step-guide-on-how-to-buy-eggplant-on-pancakeswap-23aec7fc5719" target="_blank" class="link-3">Click here for a guide on how to buy Eggplant tokens on PancakeSwap</a><br>
-      </p>
-      <div class="w-container"><img src="images/Diamond-Hands.png" loading="lazy" width="500" sizes="(max-width: 479px) 90vw, (max-width: 767px) 70vw, 500px" srcset="images/Diamond-Hands-p-500.png 500w, images/Diamond-Hands-p-800.png 800w, images/Diamond-Hands.png 8185w" alt="" class="image-10"></div>
     </div>
   </div>
   <div class="footer">
-    <div class="wrap"><img src="images/Logo-Circle.png" width="100" sizes="100px" srcset="images/Logo-Circle-p-500.png 500w, images/Logo-Circle-p-800.png 800w, images/Logo-Circle-p-1080.png 1080w, images/Logo-Circle-p-1600.png 1600w, images/Logo-Circle.png 2000w" alt="" class="image-8">
+    <div class="wrap">
+      <div class="text-block-4"><br>Press</div><img src="images/marketwatch-vector-logo.png" loading="lazy" width="400" sizes="(max-width: 479px) 90vw, (max-width: 767px) 70vw, 400px" srcset="images/marketwatch-vector-logo-p-500.png 500w, images/marketwatch-vector-logo.png 1251w" alt="">
+      <div class="text-block-4"><br><br></div>
       <div class="footer-list">
         <a href="http://twitter.com/EggplantDEX" target="_blank" class="footer-link">Twitter</a>
         <a href="https://t.me/joinchat/p21ygChR_-c1YTM0" target="_blank" class="footer-link">Telegram</a>
@@ -183,10 +106,10 @@
         <a href="documents/Whitepaper-Compressed.pdf" target="_blank" class="footer-link">Whitepaper</a>
         <a href="#" class="footer-link">© Eggplant 2021. All Rights Reserved.</a>
       </div>
-      <div class="text-block-3">The information provided in this disclaimer and the corresponding website does not constitute investment advice, financial advice, trading advice, or any other sort of advice and you should not treat any of the website’s content as such. The $EGGPLANT team does not recommend that any cryptocurrency should be bought, sold, or held by you. Do conduct your own due diligence and consult your financial advisor before making any investment decisions. Please refer to the Whitepaper for the full disclaimer.</div>
+      <div class="text-block-3">The information provided in this disclaimer and the corresponding website does not constitute investment advice, financial advice, trading advice, or any other sort of advice and you should not treat any of the website’s content as such. Do conduct your own due diligence and consult your financial advisor before making any investment decisions. <br>Please refer to the Whitepaper for the full disclaimer.</div>
     </div>
   </div>
-  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=609bc1a36069c4fd8cc14e8c" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=60cb55a4aded3142e5acd514" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
 </body>
